fixed broken scaling styles on small devices

--- a/src/components/layouts/GotoTopButton/GotoTopButton.module.scss
+++ b/src/components/layouts/GotoTopButton/GotoTopButton.module.scss
@@ -53,10 +53,13 @@
 @media only screen and (max-width: 500px) {
   .gotoTopWrapper {
     bottom: 60px;
-    width: 45px;
-    height: 45px;
+    width: 50px;
+    height: 50px;
     &::before {
       @include arrowNavigate(.7em, -135deg, 1.3em, $whiteColor);
+      margin-left: 0;
+      left: 50%;
+      transform: translate(-50%, -50%) rotate(-135deg);
       margin-top: 1px;
     }
     &:hover {
